# memchr

./: README.md
api/: server.py
memory_core/: __init__.py  manager.py
storage/: __init__.py  sqlite_storage.py
tests/: demo.py
toy_memory_system/: .gitignore  config.py  pyproject.toml
toy_memory_system/api/: __init__.py
toy_memory_system/examples/: integration_example.py
toy_memory_system/memory_core/: extractor.py  llm_client.py  models.py
toy_memory_system/tests/: test_memory.py
