[project]
name = "toy-memory-system"
version = "1.0.0"
description = "智能对话玩具记忆系统"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["memory", "ai", "chatbot", "toy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
llm = [
    "httpx>=0.24.0",
]
nlp = [
    "jieba>=0.42.1",
]
vector = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "toy-memory-system[api,llm,nlp,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
